Se integra el servicio getOldNotification en notificationManager, udistrital/notificacion_api#5
